# JaxPycharmm

./: .env  .gitignore  README.md  aaa.crd  conda-dependencies.txt  environment.yml  example_paths.toml  hello.py  paths.toml  pyproject.toml  requirements.txt  setup.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  model-checkpoint.py  test-Copy1-checkpoint.ipynb  test-Copy2-checkpoint.ipynb  test-Copy3-checkpoint.ipynb  test-Copy5-checkpoint.ipynb  test-checkpoint.ipynb
analysis/: run_analysis.sh  run_analysis_input.sh  run_analysis_multi.sh
checkpoints/: diox-q-eq.1.pkl  diox-q.pkl  diox-q2.pkl  diox-q3.1.pkl  diox-q3.2.pkl  diox-q3.pkl  test.pkl  test2-q.pkl  test2.pkl
ckpts/test1-b8152776-e3d2-45af-a223-926a1f42812c/: _CHECKPOINT_METADATA  _sharding  manifest.ocdbt
data/: test.py
data/basepairs/: a.npz  at_prod.npz  at_reag.npz  at_retune.npz  c.npz  g.npz  gc_prod.npz  gc_reag.npz  gc_retune.npz  neb_at.npz  neb_gc.npz  rattle_neb_at.npz  rattle_neb_gc.npz  t.npz
example_training/: 23:10:18-memory-1.prof  23:12:11-memory-2.prof  calcs.csv  calcs.pkl  dcme-pyscf.ipynb  debug  debug2  dichlormethane-example.py  dichloromethane-data-Copy1.ipynb  dichloromethane-data.ipynb  efaspice  efaspicel0  efaspicel1  job.sh  job2.sh  job3.sh  out  per_cluster.pkl  per_dimer.pkl  per_monomer.pkl  run_script_dummy.sh  spice.ipynb  spice.py  test-dcm.py  test-dcm2.py  test.py  test_ala.py  test_ala_cpu.py  test_ala_fullbatch.py  test_ala_fullbatch_efa.py  test_cf3.py  test_cf3_fullbatch.py  test_cf3_fullbatch_efa.py  test_dna_fullbatch.py  test_dna_fullbatch_efa.py  test_mlp.py  total.dmat
example_training/.ipynb_checkpoints/: test_cf3_fullbatch-checkpoint.py
input/: ala_-147.0_180.0.psf  ala_-154.0_26.0+wat.psf  ala_-154.0_26.0.pdb.solv
logs/cf3all-1407135e-8deb-4cf6-a844-e0cc2bb44959/: tf_logs.csv
logs/cf3all-3f0b4338-3dc7-4006-be1f-39255bd8003a/: tf_logs.csv
logs/cf3all-8c68a176-8a3f-442b-b68d-ba46b51fb335/: tf_logs.csv
logs/cf3all-a9319d68-79aa-4913-98fe-2b09124fa1c8/: tf_logs.csv
logs/efa0basepairs-1619ffed-2265-42ff-991a-37adcb30ff3c/: tf_logs.csv
logs/efa0basepairs-a762f316-4e67-4961-aa4e-173bd244da6c/: tf_logs.csv
logs/efa0cf3-3fef1df4-3ffd-416a-b8ac-0c34e14482eb/: tf_logs.csv
logs/test-41a272ed-400a-4510-afde-d88f026d6388/: tf_logs.csv
logs/test-6276dc44-fdba-4835-960b-d42df1b1800a/: tf_logs.csv
logs/test-b5fb4f90-1885-406e-9397-be13e47e3a44/: tf_logs.csv
logs/test-c8a03cb9-a448-49c3-9c74-394c38931b39/: tf_logs.csv
logs/test-ec04d45c-33e4-415e-987a-eb3548ca0770/: tf_logs.csv
md/triala/: aaa.psf  dyna.aaa.cor  dyna.aaa.psf  equi.aaa.cor  equi.aaa.psf  heat.aaa.cor  heat.aaa.psf  heat.dcd  heat.res  mini.aaa.cor  mm.dyna.aaa.dcd  mm.dyna.aaa.res  mm.equi.aaa.dcd  mm.equi.aaa.res  mm.heat.aaa.dcd  mm.heat.aaa.res  mm.pept_nobonds.aaa.psf  nve.dcd  nve.res  testaaa.vmd
notebooks/: Untitled.ipynb  test-Copy3.ipynb  test.ipynb
notebooks/.ipynb_checkpoints/: test-Copy5-checkpoint.ipynb
notebooks/analysis/: charged.txt  spice.ipynb
notebooks/data/: Untitled.ipynb  test-training-Copy1.ipynb  test-training.ipynb
notebooks/development/: Untitled.ipynb  Untitled1.ipynb  cosine_schedule.ipynb  livedisplay.ipynb  nnx.ipynb  sharding.ipynb  test.py
notebooks/mmml/: 01_implementation.ipynb  TestScript.ipynb  Untitled.ipynb  Untitled1.ipynb  calculator-charmm-ele-lj-val.ipynb  calculator.ipynb  charges  constraints.txt  coord.engrad  coord.xyz  energy  forces.ipynb  gradient  napari.ipynb  new_chk_file  opt.traj  test.xyz  wbo  xtbout.json  xtbrestart  xtbtopo.mol
notebooks/old/: Untitled1.ipynb  dioxi-eval.ipynb  outlierdetection.ipynb  test-Copy1.ipynb  test-Copy5.ipynb
physnetjax/: analysis.py  api.py  data.py  directories.py  do_test_batches.py  enums.py  epoch_printer.py  evalstep.py  helper_mlp.py  loss.py  model.py  optimizer.py  plot_run.py  pretty_printer.py  restart.py  savepad.py  tensorboard_logging.py  training.py  trainstep.py  utils.py  zbl.py
physnetjax/.ipynb_checkpoints/: analysis-checkpoint.py  api-checkpoint.py  ir-checkpoint.py  loss-checkpoint.py  tensorboard_interface-checkpoint.py  test_ala_fullbatch-checkpoint.py  training-checkpoint.py
physnetjax/analysis/: analyse_physnet.py  analyse_trained.py  analyse_trained_script.sh  analysis.py  cluster.py  data_analysis_utils.py  model_analysis_utils.py  plot_run.py  povray_tool.py
physnetjax/calc/: ase_calculator.py  helper_mlp.py  pycharmm_calculator.py
physnetjax/data/: batches.py  cut_grid.py  data.py  datasets.py  do_test_batches.py  full_padding.py  read_ase.py  read_npz.py  savepad.py
slurm/: README.md  Untitled.ipynb  ablation.ipynb  submit-job.sh  test.sh  test2.sh  test3.sh
src/: analysis.py  api.py  data.py  evalstep.py  helper_mlp.py  ir.py  loss.py  model.py  optimizer.py  pycharmm_calculator.py  savepad.py  slurm-5861.out  test.py  test_ala.py  test_ala_fullbatch.py  test_cf3.py  test_mlp.py  training.py  trainstep.py  triala.py  utils.py  zbl.py
tests/: do_test_openqdc.py  processed_data_batch_0.npz  test_batches.py  test_data.py  test_datasets.py  test_model.py  test_npz_file_processing.py  test_openqdc.py  test_read_npz.py
(+416 files in other folders)
